[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
image = { version = "0.24.7", features = ["jpeg", "png"] }
mlua = { version = "0.9.2", features = [
    "async",
    "serialize",
    "send",
    "luajit",
    "vendored",
] }
sdl2 = { version = "0.36.0", features = ["bundled", "raw-window-handle"] }
tokio = { version = "1.35.1", features = ["full"] }
wgpu = "0.18.0"
