[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
image = { version = "0.24.7", features = ["jpeg", "png"] }
mlua = { version = "0.9.2", features = [
    "async",
    "serialize",
    "send",
    "luajit",
    "vendored",
] }
tokio = { version = "1.35.1", features = ["full"] }
wgpu = "0.18.0"
winit = { version = "0.29.8", features = ["rwh_05"] }
