[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.3"
glyphon = "0.5.0"

image = { version = "0.24.7", features = ["jpeg", "png"] }
include_dir = "0.7.3"
mlua = { version = "0.9.2", features = [
    "async",
    "serialize",
    "send",
    "luajit",
    "vendored",
] }
tar = "0.4.40"
tobj = { version = "4.0.1", features = ["async"] }
tokio = { version = "1.35.1", features = ["full"] }
wgpu = "0.19.0"
winit = { version = "0.29.8", features = ["rwh_05"] }
[build-dependencies]
tar = "0.4.40"
[profile.dev]
opt-level = 1
